// Vitest Snapshot v1

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1505
dirigeant . indépendant . revenu professionnel: 51983
dirigeant . rémunération . cotisations: 23122
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40811
dirigeant . rémunération . totale: 73122
entreprise . charges: 0
entreprise . chiffre d'affaires: 73122
impôt . montant: 9189"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20786
dirigeant . rémunération . cotisations: 9059
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19234
dirigeant . rémunération . totale: 29059
entreprise . charges: 0
entreprise . chiffre d'affaires: 29059
impôt . montant: 766"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20786
dirigeant . rémunération . cotisations: 9077
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19234
dirigeant . rémunération . totale: 29077
entreprise . charges: 0
entreprise . chiffre d'affaires: 29077
impôt . montant: 766"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52100
dirigeant . rémunération . cotisations: 27496
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40776
dirigeant . rémunération . totale: 77496
entreprise . charges: 0
entreprise . chiffre d'affaires: 77496
impôt . montant: 9224"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52122
dirigeant . rémunération . cotisations: 28281
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40770
dirigeant . rémunération . totale: 78281
entreprise . charges: 0
entreprise . chiffre d'affaires: 78281
impôt . montant: 9230"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52190
dirigeant . rémunération . cotisations: 30801
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40749
dirigeant . rémunération . totale: 80801
entreprise . charges: 0
entreprise . chiffre d'affaires: 80801
impôt . montant: 9251"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52026
dirigeant . rémunération . cotisations: 24756
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40799
dirigeant . rémunération . totale: 74756
entreprise . charges: 0
entreprise . chiffre d'affaires: 74756
impôt . montant: 9201"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52026
dirigeant . rémunération . cotisations: 24756
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40799
dirigeant . rémunération . totale: 74756
entreprise . charges: 0
entreprise . chiffre d'affaires: 74756
impôt . montant: 9201"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517787
dirigeant . rémunération . cotisations: 155212
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 280593
dirigeant . rémunération . totale: 655212
entreprise . charges: 0
entreprise . chiffre d'affaires: 655212
impôt . montant: 219407
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17707
dirigeant . rémunération . cotisations: 13161
dirigeant . rémunération . net: 16839
dirigeant . rémunération . net . après impôt: 16565
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 40000
impôt . montant: 274"
`;

exports[`calculate simulations-indépendant > contrats madelin 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17707
dirigeant . rémunération . cotisations: 14361
dirigeant . rémunération . net: 15639
dirigeant . rémunération . net . après impôt: 15365
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 40000
impôt . montant: 274"
`;

exports[`calculate simulations-indépendant > contrats madelin 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20451
dirigeant . rémunération . cotisations: 10361
dirigeant . rémunération . net: 19639
dirigeant . rémunération . net . après impôt: 18926
dirigeant . rémunération . totale: 30000
entreprise . charges: 10000
entreprise . chiffre d'affaires: 40000
impôt . montant: 713"
`;

exports[`calculate simulations-indépendant > contrats madelin 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13797
dirigeant . rémunération . cotisations: 6743
dirigeant . rémunération . net: 13257
dirigeant . rémunération . net . après impôt: 13257
dirigeant . rémunération . totale: 20000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 21000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > contrats madelin 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 227122
dirigeant . rémunération . cotisations: 81021
dirigeant . rémunération . net: 218979
dirigeant . rémunération . net . après impôt: 138583
dirigeant . rémunération . totale: 300000
entreprise . charges: 15000
entreprise . chiffre d'affaires: 315000
impôt . montant: 80396
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13697
dirigeant . rémunération . cotisations: 6843
dirigeant . rémunération . net: 13157
dirigeant . rémunération . net . après impôt: 13157
dirigeant . rémunération . totale: 20000
entreprise . charges: 500
entreprise . chiffre d'affaires: 20500
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > contrats madelin 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 9398
dirigeant . rémunération . cotisations: 13143
dirigeant . rémunération . net: 6857
dirigeant . rémunération . net . après impôt: 6857
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17707
dirigeant . rémunération . cotisations: 13161
dirigeant . rémunération . net: 16839
dirigeant . rémunération . net . après impôt: 16565
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 274"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17707
dirigeant . rémunération . cotisations: 14361
dirigeant . rémunération . net: 15639
dirigeant . rémunération . net . après impôt: 15365
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 274"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20451
dirigeant . rémunération . cotisations: 10361
dirigeant . rémunération . net: 19639
dirigeant . rémunération . net . après impôt: 18926
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 713"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13797
dirigeant . rémunération . cotisations: 6743
dirigeant . rémunération . net: 13257
dirigeant . rémunération . net . après impôt: 13257
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 227122
dirigeant . rémunération . cotisations: 81021
dirigeant . rémunération . net: 218979
dirigeant . rémunération . net . après impôt: 138583
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 80396
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 223622
dirigeant . rémunération . cotisations: 84521
dirigeant . rémunération . net: 215479
dirigeant . rémunération . net . après impôt: 136658
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 78821
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 137
dirigeant . rémunération . cotisations: 1361
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1461
entreprise . charges: 0
entreprise . chiffre d'affaires: 1461
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 151
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 251
entreprise . charges: 0
entreprise . chiffre d'affaires: 251
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération covid 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 103
dirigeant . indépendant . revenu professionnel: 51815
dirigeant . rémunération . cotisations: 21347
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40450
dirigeant . rémunération . totale: 71347
entreprise . charges: 0
entreprise . chiffre d'affaires: 71347
impôt . montant: 9550"
`;

exports[`calculate simulations-indépendant > exonération covid 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 103
dirigeant . indépendant . revenu professionnel: 51032
dirigeant . rémunération . cotisations: 12977
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40685
dirigeant . rémunération . totale: 500
entreprise . charges: 0
entreprise . chiffre d'affaires: 62977
impôt . montant: 9315"
`;

exports[`calculate simulations-indépendant > exonération covid 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 140
dirigeant . indépendant . revenu professionnel: 51440
dirigeant . rémunération . cotisations: 17475
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40562
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 67475
impôt . montant: 9438"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 35306
dirigeant . rémunération . cotisations: 10913
dirigeant . rémunération . net: 34087
dirigeant . rémunération . net . après impôt: 29902
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 4185
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72164
dirigeant . rémunération . cotisations: 30548
dirigeant . rémunération . net: 69452
dirigeant . rémunération . net . après impôt: 56374
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 13078"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 72164
dirigeant . rémunération . cotisations: 30548
dirigeant . rémunération . net: 69452
dirigeant . rémunération . net . après impôt: 56374
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 13078"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20786
dirigeant . rémunération . cotisations: 9059
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19397
dirigeant . rémunération . totale: 29059
entreprise . charges: 0
entreprise . chiffre d'affaires: 29059
impôt . montant: 603"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51983
dirigeant . rémunération . cotisations: 23122
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41787
dirigeant . rémunération . totale: 73122
entreprise . charges: 0
entreprise . chiffre d'affaires: 73122
impôt . montant: 8213"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20786
dirigeant . rémunération . cotisations: 9059
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17921
dirigeant . rémunération . totale: 29059
entreprise . charges: 0
entreprise . chiffre d'affaires: 29059
impôt . montant: 2079"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 595
dirigeant . rémunération . cotisations: 1456
dirigeant . rémunération . net: 544
dirigeant . rémunération . net . après impôt: 544
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42259
dirigeant . rémunération . cotisations: 19367
dirigeant . rémunération . net: 40633
dirigeant . rémunération . net . après impôt: 35629
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 5004"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10394
dirigeant . rémunération . cotisations: 4614
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14614
entreprise . charges: 0
entreprise . chiffre d'affaires: 14614
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10394
dirigeant . rémunération . cotisations: 4614
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14614
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15614
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42797
dirigeant . rémunération . cotisations: 19643
dirigeant . rémunération . net: 41149
dirigeant . rémunération . net . après impôt: 3000
dirigeant . rémunération . totale: 60792
entreprise . charges: 0
entreprise . chiffre d'affaires: 60792
impôt . montant: 5149"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13573
dirigeant . rémunération . cotisations: 5940
dirigeant . rémunération . net: 13060
dirigeant . rémunération . net . après impôt: 13060
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 12848
dirigeant . rémunération . cotisations: 5638
dirigeant . rémunération . net: 12362
dirigeant . rémunération . net . après impôt: 12362
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 550
dirigeant . rémunération . cotisations: 1448
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1948
entreprise . charges: 0
entreprise . chiffre d'affaires: 1948
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1066
dirigeant . rémunération . cotisations: 1554
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2554
entreprise . charges: 0
entreprise . chiffre d'affaires: 2554
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1583
dirigeant . rémunération . cotisations: 1663
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3163
entreprise . charges: 0
entreprise . chiffre d'affaires: 3163
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2099
dirigeant . rémunération . cotisations: 1770
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3770
entreprise . charges: 0
entreprise . chiffre d'affaires: 3770
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5199
dirigeant . rémunération . cotisations: 2446
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7446
entreprise . charges: 0
entreprise . chiffre d'affaires: 7446
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10394
dirigeant . rémunération . cotisations: 4615
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14615
entreprise . charges: 0
entreprise . chiffre d'affaires: 14615
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103803
dirigeant . rémunération . cotisations: 40176
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72490
dirigeant . rémunération . totale: 140176
entreprise . charges: 0
entreprise . chiffre d'affaires: 140176
impôt . montant: 27510
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033712
dirigeant . rémunération . cotisations: 241655
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 527790
dirigeant . rémunération . totale: 1241655
entreprise . charges: 0
entreprise . chiffre d'affaires: 1241655
impôt . montant: 472210
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;
